<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nieyue.bt</groupId>
    <artifactId>bt</artifactId>
    <version>1.0</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.github.atomashpolskiy</groupId>
            <artifactId>bt-core</artifactId>
            <version>1.9</version>
        </dependency>
        <!-- for the sake of keeping the core with minimum number of 3-rd party
             dependencies HTTP tracker support is shipped as a separate module;
             you may omit this dependency if only UDP trackers are going to be used -->
        <dependency>
            <groupId>com.github.atomashpolskiy</groupId>
            <artifactId>bt-http-tracker-client</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>com.github.atomashpolskiy</groupId>
            <artifactId>bt-dht</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>com.github.atomashpolskiy</groupId>
            <artifactId>bt-upnp</artifactId>
            <version>1.9</version>
        </dependency>

        <!--<dependency>
            <groupId>com.turn</groupId>
            <artifactId>ttorrent-core</artifactId>
            <version>1.5</version>
        </dependency>-->
    </dependencies>


</project>